# sparktype

./: .mcp.json  CLAUDE.md  IMAGE_TESTING_PLAN.md  LICENSE  NETLIFY_SETUP.md  README.md  TAURI_UPDATER_IMPLEMENTATION.md  concat.py  debug-blocks.js  debug-edit-button.html  debug-sparkblock.html  debug-stable-ids.js  example-modular-block.md  index.html  jest.config.js  netlify.toml  package-lock.json  package.json  signum-vite.txt  sparkblock.txt  sparktype-public.txt  sparktype-src.txt  src-refactor.tsx  src.txt  test-declarative-presets.md  test-directive-rendering.md  test-editor-behavior.md  test-parsing.md  test-stable-ids.md  test-unique-ids.js  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.config.web.ts  webauthn-implementation-plan.md
.claude/: settings.local.json
boing-11/: index.html  rss.xml  sitemap.xml
boing-12/: index.html  rss.xml
boing-5/: index.html  rss.xml  sitemap.xml
docs/: ARCHIVED_IMAGE_CONTEXT_DETECTION.md  IMAGE_CONTEXT_DETECTION.md  IMAGE_PIPELINE_PROCESS.md  IMAGE_PRESET_SYSTEM.md  IMAGE_SYSTEM_SUMMARY.md  IMAGE_TESTING_GUIDE.md  SECURITY.md  (+8 more)
docs-3/: index.html  rss.xml  sitemap.xml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: iOS.plist
src-tauri/icons/: icon.icns  icon.icns.backup
src-tauri/permissions/: default.toml
src-tauri/permissions/autogenerated/commands/: authenticate_passkey.toml  is_webauthn_available.toml  register_passkey.toml
src-tauri/src/: lib.rs  webauthn.rs
(+609 files in other folders)
