[package]
name = "app"
version = "0.1.0"
description = "Sparktype"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.0.0"
tauri-plugin-mcp = { version = "0.4.27" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Dependencies for WebAuthn authentication
objc2-authentication-services = "0.2"
objc2-foundation = "0.2"
rand = "0.8"
base64 = "0.22"
security-framework = "2.9"
urlencoding = "2.1"
tokio = { version = "1.0", features = ["time"] }
